Adição dos Requisitos e Storyboards

--- a/site/Elicitacao/storyboard/index.html
+++ b/site/Elicitacao/storyboard/index.html
@@ -478,7 +478,14 @@
 <tr>
 <td>08/03/2021</td>
 <td>0.1</td>
-<td>Criação do documento, adição do conteúdo do documento, adição de um storyboard.</td>
+<td>Criação do documento e adição da introdução e metodologia.</td>
+<td>Eduarda Servidio</td>
+<td>----</td>
+</tr>
+<tr>
+<td>08/03/2021</td>
+<td>0.2</td>
+<td>Adição das personas, storyboards, requisitos e referências.</td>
 <td>Eduarda Servidio</td>
 <td>----</td>
 </tr>
@@ -489,10 +496,37 @@
 <p>StoryBoard é a técnica que usa ilustrações em sequência para contar uma história com o objetivo de mostrar situações de uso dos requisitos de um sistema.</p>
 <h2 id="metodologia">Metodologia</h2>
 <p>Foram criadas duas personas e, a partir delas, dois storyboards, que ilustram o possível uso do aplicativo Meu Gov.br, através da ferramenta Storyboard That.</p>
-<h2 id="storyboards">Storyboards</h2>
-<p><img alt = "Storyboard_1" src="../../Imagens_storyboard/storyboard1"/>
+<h2 id="storyboard">Storyboard</h2>
+<table>
+<thead>
+<tr>
+<th></th>
+<th>Persona</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Nome</td>
+<td>Marcos Jorge</td>
+</tr>
+<tr>
+<td>Idade</td>
+<td>43 anos</td>
+</tr>
+<tr>
+<td>Profissão</td>
+<td>Autônomo</td>
+</tr>
+<tr>
+<td>Hábito</td>
+<td>Frequentemente, esquece seus documentos físicos em casa</td>
+</tr>
+</tbody>
+</table>
+<p><img alt = "Storyboard_1" src="../Imagens_storyboard/storyboard1.jpg"/>
 Autor: Eduarda Servidio</p>
-<p>O grupo montou um questionário, via google forms, com 15 perguntas, sendo a última uma questão aberta solicitando um feedback sobre novas funções ou uma sugestão que o usuário quisesse apontar. A depender das respostas que os usuários davam perguntas diferentes apareciam para eles, visto que não fazia sentido perguntar há uma pessoa que não utiliza o aplicativo meu-gov.br,a experiencia dela com o aplicativo, por exemplo.Nosso Questionário foi aplicado entre os dias 01/03/2021 até o dia 06/03/2021, quando esses dados foram colhidos para analise, tivemos 120 respostas.</p>
+<p><img alt = "Storyboard_2" src="../Imagens_storyboard/"/></p>
+<p>Autor: Eduarda Servidio</p>
 <h1 id="requisitos">Requisitos</h1>
                 
               
